--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/josefin-sans": "^5.0.21",
+    "@iconify-json/cib": "^1.1.8",
+    "@iconify-json/mdi": "^1.1.67",
+    "@iconify-json/simple-icons": "^1.1.109",
     "astro": "^4.12.1",
+    "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.3",
     "tailwindcss": "^3.4.6"
+  },
+  "devDependencies": {
+    "svgo": "^2.8.0"
   }
 }
