--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/josefin-sans": "^5.0.21",
     "@iconify-json/cib": "^1.1.8",
     "@iconify-json/mdi": "^1.1.67",
     "@iconify-json/simple-icons": "^1.1.109",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.12.1",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.3",
-    "tailwindcss": "^3.4.6"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.6",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "svgo": "^2.8.0"
