--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/cib": "^1.1.8",
     "@iconify-json/mdi": "^1.1.67",
     "@iconify-json/simple-icons": "^1.1.109",
+    "@iconify-json/skill-icons": "^1.1.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.12.1",
