--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@iconify-json/skill-icons": "^1.1.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^4.12.1",
     "astro-icon": "^1.1.0",
     "astro-navbar": "^2.3.3",
