--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,8 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "dist/*"
+          source: "dist/"
+          strip_components: 1
           target: "/var/www/krish-portfolio/releases/${{ env.RELEASE }}"
 
       - name: Switch Symlink and Auto-Cleanup Old Releases
